k8s/apps/spotifybutler/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: spotifybutler
  namespace: web
spec:
  replicas: 1
  selector:
    matchLabels:
      app: spotifybutler
  template:
    metadata:
      labels:
        app: spotifybutler
    spec:
      containers:
        - name: web
          image: hashicorp/http-echo:0.2.3
          args:
            - "-text=Hello from spotifybutler (zachsexton.com/spotifybutler)"
          ports:
            - containerPort: 5678
