k8s/apps/spotifybutler/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: spotifybutler
  namespace: web
  annotations:
    cert-manager.io/cluster-issuer: cloudflare-dns
spec:
  ingressClassName: traefik
  tls:
    - hosts:
        - zachsexton.com
      secretName: multi-domain-tls
  rules:
    - host: zachsexton.com
      http:
        paths:
          - path: /spotifybutler
            pathType: Prefix
            backend:
              service:
                name: spotifybutler
                port:
                  number: 80
